namespace AdvanceWars.Runtime
{
    public class Tactic { }
}