@startuml
skin rose

class Propulsion <<(T, Orange)>>
class Terrain{
    +defensiveRating: int {[0,5]}
    +MoveCostOf(:Propulsion): int
}
class Battalion{
    +forces: int
}
class Unit <<(T, Orange)>>
class MovementRate <<(T, Orange)>>
class Nation <<(T, Orange)>>
class Map
class Space
class Coord <<(T, orange)>>
class Armor <<(T, Orange)>>
class Weapon <<(T, Orange)>>

package Orders{
class Tactic <<(T, Orange)>>
class Maneuver
class TargetingManeuver
class CommandingOfficer
}

package Fire{
class Combat
class Offensive{
+Damage: int
}
class TheaterOps
}

Unit --> Propulsion
Unit --> MovementRate
Unit --> Armor
Map +-- Space
(Map, Space) .. Coord
Space --> Terrain
Terrain --> Propulsion : costs
Battalion --> Nation
Space o-- Battalion : 0..1
Battalion --> Unit
Building -u-|> Terrain
Unit --> Weapon
Weapon --> Armor : damagesTo

Offensive o--- "2" Battalion : attacker\ndefender
Offensive o--- Terrain : battlefield

CommandingOfficer *-- "0..*" Maneuver

CommandingOfficer ..> Battalion
CommandingOfficer ..> Tactic
TargetingManeuver -u-|> Maneuver
TargetingManeuver o-- Battalion : target
Maneuver o-- Battalion : performer
Maneuver --> Tactic

Unit ..> Tactic : ¿? (cycle)

Combat *.. "2" Offensive : attack\ncounterattack
Combat *-- "2" TheaterOps : attacking\ndefending

TheaterOps --> Terrain : battlefield
TheaterOps --> Battalion : troops

@enduml